force-app/main/default/objects/RMS_TradingTerm__c/RMS_TradingTerm__c.object-meta.xml
<CustomObject>
    <description>TradingTerm history</description>
    <label>RMS TradingTerm</label>
    <nameField>
        <label>Sold To Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RMS TradingTerm</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>