force-app/main/default/objects/RMS_TradingTerm__c/fields/Sold_To_Code__c.field-meta.xml
<CustomField>
    <fullName>Sold_To_Code__c</fullName>
    <formula>SUBSTITUTE(Name, TEXT(Year__c), &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sold-To Code</label>
    <type>Text</type>
</CustomField>