force-app/main/default/objects/RMS_TradingTerm__c/fields/TT_APP_ACC__c.field-meta.xml
<CustomField>
    <fullName>TT_APP_ACC__c</fullName>
    <label>TT(APP/ ACC)</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>