force-app/main/default/objects/RMS_TradingTerm__c/fields/TT_FTW_EG__c.field-meta.xml
<CustomField>
    <fullName>TT_FTW_EG__c</fullName>
    <label>TT(FW-AS CORE)</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>