force-app/main/default/objects/RMS_TradingTerm__c/fields/TT_FW_Seasonal__c.field-meta.xml
<CustomField>
    <fullName>TT_FW_Seasonal__c</fullName>
    <label>TT(FW-Seasonal)</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>