force-app/main/default/objects/RMS_TradingTerm__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Sold_To_Code__c</columns>
    <columns>Year__c</columns>
    <columns>TT_APP_ACC__c</columns>
    <columns>TT_FTW_EG__c</columns>
    <columns>TT_FW_Seasonal__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>