force-app/main/default/objects/RMS_TradingTerm__c/listViews/RMS_CS_Team_RMS_TradingTerm.listView-meta.xml
<ListView>
    <fullName>RMS_CS_Team_RMS_TradingTerm</fullName>
    <filterScope>Queue</filterScope>
    <label>RMS CS Team</label>
    <queue>RMS_CS_Team</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>